third_party/WebKit/Source/platform/scheduler/child/web_task_runner_impl.cc
@@ -30,7 +30,8 @@ void WebTaskRunnerImpl::postTask(const blink::WebTraceLocation& location,
 void WebTaskRunnerImpl::postDelayedTask(const blink::WebTraceLocation& location,
                                         blink::WebTaskRunner::Task* task,
                                         double delayMs) {
-  DCHECK_GE(delayMs, 0.0);
+  DCHECK_GE(delayMs, 0.0) << location.function_name() << " "
+                          << location.file_name();
   task_queue_->PostDelayedTask(location,
                                base::Bind(&WebTaskRunnerImpl::runTask,
                                           base::Passed(base::WrapUnique(task))),
@@ -40,7 +41,8 @@ void WebTaskRunnerImpl::postDelayedTask(const blink::WebTraceLocation& location,
 void WebTaskRunnerImpl::postDelayedTask(const WebTraceLocation& location,
                                         const base::Closure& task,
                                         double delayMs) {
-  DCHECK_GE(delayMs, 0.0);
+  DCHECK_GE(delayMs, 0.0) << location.function_name() << " "
+                          << location.file_name();
   task_queue_->PostDelayedTask(location, task,
                                base::TimeDelta::FromMillisecondsD(delayMs));
 }
